' Generated by UML Generator
' Encoded: jP8nJyCm48Lt_mgFHP4YvWweNP2G6533XXYkzf6UajZH-L89IldjkAcKfCKHB8o-U_xU-PvNGO2bQseLAd8jC3JQr132MeHfsma-6EyA-a1zgtPaKHjYKwDIv0Jv3GpgPmONMi-Y3qhhBuirxP4NDqkzzsJLKQcU67MTgNfDDgifTjJEIaRBHrzI43BX7enuVZyx6qOG7COvNHqEO_y9J0KbkVBK7mxZ21iFDidFVk5dV-CN2F-9Ns-3SCHUe0ynvkXtr0sGMm2NOQcB6B0hNrud2pudbEUVTnFdFfAhsey7vFcqdLnXZxYkpaal1aWiB0rBAwUi5JeRV_it
' URL: http://www.plantuml.com/plantuml/uml/jP8nJyCm48Lt_mgFHP4YvWweNP2G6533XXYkzf6UajZH-L89IldjkAcKfCKHB8o-U_xU-PvNGO2bQseLAd8jC3JQr132MeHfsma-6EyA-a1zgtPaKHjYKwDIv0Jv3GpgPmONMi-Y3qhhBuirxP4NDqkzzsJLKQcU67MTgNfDDgifTjJEIaRBHrzI43BX7enuVZyx6qOG7COvNHqEO_y9J0KbkVBK7mxZ21iFDidFVk5dV-CN2F-9Ns-3SCHUe0ynvkXtr0sGMm2NOQcB6B0hNrud2pudbEUVTnFdFfAhsey7vFcqdLnXZxYkpaal1aWiB0rBAwUi5JeRV_it
' Generated on: 2025-11-14T14:29:58.043342868

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Transport {
  ~deliver(): void
}

class Truck {
  +deliver(): void
}

class Ship {
  +deliver(): void
}

interface LogisticsFactory {
  ~createTransport(): Transport
  ~createPackaging(): Packaging
}

class RoadLogisticsFactory {
  +createTransport(): Transport
  +createPackaging(): Packaging
}

class SeaLogisticsFactory {
  +createTransport(): Transport
  +createPackaging(): Packaging
}

class AbstractFactory {
  +{static} main(args: String[]): void
}

Truck ..|> Transport
Ship ..|> Transport
LogisticsFactory ..> Transport
RoadLogisticsFactory ..|> LogisticsFactory
RoadLogisticsFactory ..> Transport
SeaLogisticsFactory ..|> LogisticsFactory
SeaLogisticsFactory ..> Transport
@enduml